agregar getview y update view
