# swagger.yaml
@@ -56,6 +56,11 @@ parameters:
     in: query
     description: year selected of event
     type: number
+  viewParam:
+    name: view
+    in: query
+    description: id of the view
+    type: string  
 paths:
   #---------Swagger-----------------------------
   /swagger:
@@ -1270,6 +1275,51 @@ paths:
           description: Test unsuccessful
           schema:
             $ref: '#/definitions/ErrorResponse'
+            
+  /view:
+    x-swagger-router-controller: ViewController
+    x-typeorm-repository-name: View
+    get:
+      x-security-privilege: 'view:read'
+      operationId: getView
+      description: get the view 
+      tags:
+        - view
+      responses:
+        '200':
+          description: View successful
+          schema:
+            $ref: '#/definitions/ViewResponse'
+        '404':
+          description: View unsuccessful
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        default:
+          description: View unsuccessful
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+    put:
+      x-security-privilege: 'view:modify'
+      operationId: updateView
+      description: update view portal by id
+      tags:
+        - view
+      parameters:
+        - $ref: '#/parameters/viewParam'
+      responses:
+        '200':
+          description: successful consult
+          schema:
+             $ref: '#/definitions/ViewResponse'
+        '404':
+          description:  unsuccessful
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        default:
+          description:  unsuccessful
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+            
 #---------------definitions------------------
 definitions:
   ErrorResponse:
@@ -1427,5 +1477,15 @@ definitions:
           type: string
         name:
            type: string
+  ViewResponse:
+    type: object
+    properties:
+        viewId:
+          type: string
+          format: uuid
+        name:
+          type: string
+        status:
+           type: boolean
 
     
